--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html>
+
+   <!DOCTYPE html>
    <html lang="ru">
    <head>
        <meta charset="UTF-8">
@@ -7,6 +8,10 @@
    </head>
    <body>
        <h1>Добро пожаловать!</h1>
+       <footer>
+           <p>&copy; 2023 Мой проект. Все права защищены.</p>
+           <p><a href="mailto:info@example.com">info@example.com</a></p>
+       </footer>
    </body>
    </html>
-
+   
